# pokemon-detector-sv

./: .gitignore  AKAZETest.cpp  AKAZETrain.cpp  AKAZETrainer.cpp  CMakeLists.txt  CalculatePokemonHist.cpp  CalculateSelectScreenHist.cpp  EntityCropper.cpp  EntityCropper.h  EntityCropperPlayground.cpp  PokemonRecognizer.cpp  PokemonRecognizer.h  PokemonRecognizerBench.cpp  PokemonRecognizerGenerated.cpp  PokemonRecognizerTrain.cpp  README.md  ResultRecognizer.cpp  ResultRecognizer.h  ResultRecognizerBench.cpp  SceneDetector.cpp  SceneDetector.h  SelectionRecognizer.cpp  SelectionRecognizer.h  SelectionRecognizerBench.cpp  SelectionRecognizerGenerated.cpp  TemplateMatchTrainer.cpp  main.cpp  pokemon-detector-sv.cpp  pokemon-detector-sv.h
.github/workflows/: cmake.yml
scripts/: generate_PokemonRecognizerGenerated.sh  generate_SelectionRecognizerGenerated.sh
